--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -26,6 +26,7 @@
     "burner-connector": "0.0.18",
     "daisyui": "5.0.9",
     "ethers": "^6.15.0",
+    "framer-motion": "^12.23.24",
     "idb": "^8.0.3",
     "kubo-rpc-client": "~5.0.2",
     "next": "~15.2.3",
@@ -35,6 +36,7 @@
     "react": "~19.0.0",
     "react-dom": "~19.0.0",
     "react-hot-toast": "~2.4.0",
+    "react-spinners": "^0.17.0",
     "usehooks-ts": "~3.1.0",
     "viem": "2.34.0",
     "wagmi": "2.16.4",
